# EQAtlas_DiscordBot

./: .gitignore  CONTRIBUTING.md  README.md  TODO.md  bot.py  config.json  pyproject.toml
cogs/: fun.py  general.py
database/: models.py  schema.sql  zones.json
exceptions/: __init__.py
helpers/: checks.py  db_manager.py  scrape.py
