[tool.poetry]
name = "eqatlas_discordbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.8.4"
aiosqlite = "^0.19.0"
"discord.py" = "^2.2.3"
requests = "^2.29.0"
beautifulsoup4 = "^4.12.2"
python-dotenv = "^1.0.0"
pydantic = "^1.10.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
